fix pom memory usage