@@ -173,9 +173,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
-                <configuration>
-                    <argLine>-Xmx3072m -XX:MaxPermSize=1024m</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -193,6 +190,7 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <maxmem>4096m</maxmem>
                 </configuration>
             </plugin>
         </plugins>
